--- a/linear_regression_temperature.ipynb
+++ b/linear_regression_temperature.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example of Linear Regression Prediction"
+    "# Example of Linear Regression Prediction with temperature"
    ]
   },
   {
