Added changes to the regression houses file

--- a/linear_regression_houses.ipynb
+++ b/linear_regression_houses.ipynb
@@ -893,9 +893,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "median_house_value    1.000000\n",
+       "median_income         0.688355\n",
+       "<1H OCEAN             0.257614\n",
+       "NEAR BAY              0.160526\n",
+       "NEAR OCEAN            0.140378\n",
+       "total_rooms           0.133294\n",
+       "housing_median_age    0.106432\n",
+       "households            0.064894\n",
+       "total_bedrooms        0.049686\n",
+       "ISLAND                0.023525\n",
+       "population           -0.025300\n",
+       "longitude            -0.045398\n",
+       "latitude             -0.144638\n",
+       "INLAND               -0.484787\n",
+       "Name: median_house_value, dtype: float64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check correlation of the price in a list\n",
     "\n",
